--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -51,8 +51,6 @@ $wgh-bold: 700;
 /* CONTENT */
 
 .header {
-  margin: 80px 0 38px 0;
-  padding: 0 24px;
   h1 {
     margin: 0;
     font-weight: $wgh-black;
@@ -62,6 +60,13 @@ $wgh-bold: 700;
     font-weight: $wgh-bold;
     font-size: 26px;
     color: $grey-500;
+  }
+  &.home {
+    margin: 80px 0 38px 0;
+    padding: 0 24px;
+  }
+  &.detail {
+    margin: 24px 0 75px 0;
   }
 }
 
@@ -90,5 +95,36 @@ $wgh-bold: 700;
         font-weight: normal;
       }
     }
+  }
+}
+
+.back-to-home {
+  font-weight: $wgh-bold;
+  color: $blue-400;
+  text-decoration: none;
+  margin-bottom: 24px;
+  &:before {
+    background-color: $blue-400;
+    -webkit-mask-image: url(../assets/back.svg);
+    mask-image: url(../assets/back.svg);
+    mask-repeat: no-repeat;
+    mask-size: 8px 16px;
+    display: inline-block;
+    position: relative;
+    width: 8px;
+    height: 16px;
+    top: 2px;
+    margin-right: 5px;
+    content: "";
+  }
+}
+
+.detail-content {
+  font-size: 20px;
+  margin-bottom: 43px;
+  h5 {
+    font-weight: $wgh-bold;
+    font-size: 26px;
+    margin: 0 0 15px 0;
   }
 }
